2017-08-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Handle errors on thread read and write (seems to solve issue #38)

2017-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix max decimals

2017-07-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use default evaluation options with approximate calculation in plot function
	* Use GMP and MPFR instead of CLN

2017-07-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix 3(x+1)(x+y)^3 to factors = 81((x + y) / 3)^3 * (x + 1)

2017-07-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix engineering exp mode in qalc and allow divisors other than 3
	* Do not round digits before decimal point for exact values with exp mode off
	* Fix sin(pi+x) and cos(pi+x)

2017-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix multiplication of matrix by (row) vector

2017-07-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interpret 1e.1 as 1^10*0.1 instead of 1*e*0.1, and enable use of 'e' as unknown

2017-07-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Example property for functions

2017-07-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* More efficient factorials
	* Fix Number::print() not able to terminate with very large numbers (halted at cln::expt_pos with y = 0) 
	* Fix termination of MathStructure::print() and format() with very large size
	* Add extra termination points for MathStructure with large size and do not sort numbers when aborted
	* Fix display of large integers in fractional modes
	* Make product() and sum() more efficient
	* Fix for()
	* Check that step size gives finite number of data points and set max data points to 1000000
	* Increase speed of Number::print() with huge numbers

2017-07-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to use step size instead of sampling rate for plot function
	* Fix non-decimal numbers with rpn syntax

2017-07-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
