@@ -102,6 +102,7 @@ AC_LANG([C++])
 AC_CHECK_HEADERS([unordered_map])
 
 PKG_CHECK_MODULES(GLIB, [
+	libcurl
 	glib-2.0
 	libxml-2.0 >= 2.3.8
 	])
